# DeepArchive

./: .gitattributes  .pylintrc  Archive.py  MANIFEST.in  README.md  manage.py  requirements.txt  setup.cfg
DeepArchive/: __init__.py  _version.py  admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
DeepArchive/static/DeepArchive/: site.css
DeepArchive/templates/DeepArchive/: dblist.html  dbview.html  layout.html  setview.html
DeepArchive/templates/DeepArchive/new/: db.html  generic.html  itemset.html
DeepArchive/templatetags/: version.py
da_site/: asgi.py  settings.py  urls.py  wsgi.py
interface/: forms.py  urls.py  views.py
interface/static/interface/: site.css
interface/templates/interface/: db.html  dblist.html  dbnew.html  dbview.html  home.html  layout.html
interface/templatetags/: version.py
