[metadata]
name = DeepArchive
version = 0.0.1
description = File Library Management Utility

[options]
include_package_data = true
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = DeepArchive/_version.py
versionfile_build = DeepArchive/_version.py
tag_prefix =
parentdir_prefix =